# teams-mirror

./: .gitignore  CMakeLists.txt  Makefile  README.md  protocol_documentation.md  protocol_documentation.xml
.github/workflows/: sync.yml
client/: Makefile  main.cpp
client/commands/: command_dispatcher.cpp  command_dispatcher.hpp  create_command.cpp  create_command.hpp  errors_utils.cpp  errors_utils.hpp  help_command.cpp  help_command.hpp  info_command.cpp  info_command.hpp  list_command.cpp  list_command.hpp  login_command.cpp  login_command.hpp  logout_command.cpp  logout_command.hpp  messages_command.cpp  messages_command.hpp  packet_utils.cpp  packet_utils.hpp  send_command.cpp  send_command.hpp  subscription_commands.cpp  subscription_commands.hpp  use_command.cpp  use_command.hpp  user_command.cpp  user_command.hpp  users_command.cpp  users_command.hpp
client/core/: client.hpp
client/display/: printer.cpp  printer.hpp
client/parser/: parser.cpp  parser.hpp
common/: limits.hpp  protocol.hpp
common/utils/: Socket.cpp  Socket.hpp  System.cpp  System.hpp
server/: Makefile  main.cpp
server/commands/: command_context.hpp  command_dispatcher.cpp  command_dispatcher.hpp  command_utils.cpp  command_utils.hpp  create_command.cpp  create_command.hpp  help_command.cpp  help_command.hpp  info_command.cpp  info_command.hpp  list_command.cpp  list_command.hpp  login_command.cpp  login_command.hpp  logout_command.cpp  logout_command.hpp  messages_command.cpp  messages_command.hpp  send_command.cpp  send_command.hpp  subscription_commands.cpp  subscription_commands.hpp  use_command.cpp  use_command.hpp  user_command.cpp  user_command.hpp  users_command.cpp  users_command.hpp
server/core/client_manager/: client.hpp  client_manager.cpp  client_manager.hpp
server/core/exceptions/: server_exceptions.hpp
server/core/logger/: logging_server_stubs.cpp  server_logger.cpp  server_logger.hpp
server/core/server_manager/: server_exceptions.hpp  server_manager.cpp  server_manager.hpp
server/database/load/: load.cpp  load.hpp
server/database/save/: save.cpp  save.hpp
server/models/channel/: channel.hpp
server/models/message/: message.hpp
server/models/team/: team.hpp
server/models/thread/: thread.hpp
server/models/user/: user.hpp
server/network/reciever/: reciever.cpp  reciever.hpp
server/network/sender/: sender.cpp  sender.hpp
tests/: run_commands_e2e.sh
